test/golden/fooBACKSLASHPbar.golden

INITIALPATH:7:25: error:
    • Lexical error in literal section

    • In the quasi-quotation: [fmt|foo\Pbar|]
  |
7 | main = putStrLn [fmt|foo\Pbar|]
  |                         ^
